# slay-your-own-exam

./: .gitignore  .mcp.json  404.html  LICENSE  README.md  alarm.m4a  firestore.rules  flashcards.html  index.html  manifest.webmanifest  remote.html  study-buddy.html  sw.js
.github/workflows/: deploy.yml  desktop-release.yml  pages.yml
connector/: README.md  package.json  wrangler.toml
connector/src/: html2text.js  mcp.js  proctor.js  store.js  tools.js  worker.js
connector/test/: connector.test.mjs  html2text.test.mjs
crypto-trading-agent/: .env.example  .gitignore  README.md  RESEARCH.md  analyst-prompt.md  pyproject.toml  setup-mac.sh
crypto-trading-agent/src/coinbase_trading_agent/: __init__.py  config.py  core.py  exchange.py  guardrails.py  models.py  risk.py  robinhood.py  server.py  state.py  strategy.py
crypto-trading-agent/tests/: conftest.py  test_core.py  test_guardrails.py  test_risk.py  test_robinhood.py  test_state.py  test_strategy.py
desktop/: .gitignore  README.md  main.js  package.json
docs/: anki-mcp.md
