[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "coinbase-trading-agent"
version = "0.1.0"
description = "MCP server that turns analyst LLM predictions into risk-managed Coinbase spot trades. Trade-only: cannot withdraw, send, or deposit funds."
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.2.0",
    "coinbase-advanced-py>=1.8.0",
    "cryptography>=41",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
coinbase-trading-agent = "coinbase_trading_agent.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
